fix(search): icon has bad contrast
The search icon visible on Space homepages was jet black, and had poor contrast with the dark theme.

--- a/res/css/_common.pcss
+++ b/res/css/_common.pcss
@@ -186,7 +186,8 @@ input[type="search"].mx_textinput_icon {
 /* FIXME THEME - Tint by CSS rather than referencing a duplicate asset */
 input[type="text"].mx_textinput_icon.mx_textinput_search,
 input[type="search"].mx_textinput_icon.mx_textinput_search {
-    background-image: url("@vector-im/compound-design-tokens/icons/search.svg");
+    /* background-image: url("@vector-im/compound-design-tokens/icons/search.svg"); */
+    background-image: url("../../../../res/img/emojipicker/search.svg");
 }
 
 /* dont search UI as not all browsers support it, */
